fix: fix all of the user-service functionality including usecase, delivery, repository, and domain. fix the user endpoint in api-gateway, fix the swagger, add generate swagger in the Makefile
